# LDwangke

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  LOGIN_ERROR_DIAGNOSIS.md  PRODUCT.md  bug.md  license_manager.py  licenses_db.json  longlong.md  publish.sh  爱学习.md  设计.md
.well-known/acme-challenge/: FXBP83jLw6KyPMsFrJPCwLrp7sfTg3XNItLpRNxdvjI
admin-next/: README.md  index.html
admin-next/src/: App.vue  env.d.ts
auth-server/: .gitignore  Cargo.toml  README.md  config.example.toml  deploy.sh
auth-server/src/: auth.rs  cache.rs  config.rs  db.rs  handler.rs  main.rs  model.rs
auth-server/static/: admin.html
bt_plugin/qingka_manager/: index.html  info.json  install.sh  qingka_manager_main.py  uninstall.sh
deploy/: README.md  check_db.sh  init_db.sql  install.sh  pack.bat  reset_db.sql
docs/: admin-next-migration-plan.md  admin-next-route-contract.md  admin-next-worklog.md
go-api/: .air.toml  DB_COMPAT_REPORT.md  MIGRATION_ANALYSIS.md  check_login.ps1  check_login.sh  create_table.bat  diagnose.sh  fix-order-progress.sh  go.mod  go.sum  rename_tables.sql  restart.sh  undefined_funcs.txt  项目进度.md
go-api/config/: config.example.yaml  config.yaml
go-api/deploy/: auth_bridge.php  go-api.logrotate.conf  init_db.sql  plugin-deploy-guide.md  宝塔部署教程.md
go-api/docs/: API-DOC.md  README.md
go-api/internal/: README.md
go-api/migrations/: 001_init_core_tables.sql  (+20 more)
mall-h5/: index.html  package-lock.json  package.json  vite.config.ts
php-api/: config.php
vben-admin/: DEV-DOC.md  DYNAMIC-MODULE-GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+1147 files in other folders)
