[package]
name = "license-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dashmap = { version = "5", features = ["inline"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
chrono = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
